Update night mode style